fixed divs too close together

--- a/src/containers/CalculatorContainer.css
+++ b/src/containers/CalculatorContainer.css
@@ -5,7 +5,7 @@ section {
 }
 
 div {
-    margin: 1rem;
+    margin: 1.5rem;
 }
 
 .output-details {
